test/spec_vectors/simd_bitwise/fail/module_11.wat
(module (func (result v128) (v128.bitselect (i32.const 0) (v128.const i32x4 0 0 0 0) (v128.const i32x4 0 0 0 0))))